--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>manipulation_msgs</name>
-  <version>0.1.4</version>
+  <version>0.1.6</version>
   <description>The manipulation_msgs package</description>
 
   <maintainer email="jbinney@willowgarage.com">Jon Binney</maintainer>
@@ -16,11 +16,14 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>shape_msgs</build_depend>
+  <build_depend>household_objects_database_msgs</build_depend>
 
+  <run_depend>message_generation</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>  
   <run_depend>sensor_msgs</run_depend>
   <run_depend>shape_msgs</run_depend>  
+  <run_depend>household_objects_database_msgs</run_depend>
 
 </package>
