--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4e77e81
+	base = 18bda2f
 	trimbase = 
 	parent = release/groovy/manipulation_msgs
-	previous = 
+	previous = 4e77e81
