--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>manipulation_msgs</name>
-  <version>0.1.6</version>
+  <version>0.1.7</version>
   <description>The manipulation_msgs package</description>
 
   <maintainer email="jbinney@willowgarage.com">Jon Binney</maintainer>
@@ -11,6 +11,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>actionlib_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
@@ -18,6 +19,7 @@
   <build_depend>shape_msgs</build_depend>
   <build_depend>household_objects_database_msgs</build_depend>
 
+  <run_depend>actionlib_msgs</run_depend>
   <run_depend>message_generation</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
