--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cdd7337
+	base = 27243aa
 	trimbase = 
 	parent = release/hydro/manipulation_msgs
-	previous = 
+	previous = cdd7337
