--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6dee68f
+	base = 53f00ab
 	trimbase = 
 	parent = debian/hydro/manipulation_msgs
-	previous = 
+	previous = 6dee68f
