--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 94dc7fb
+	base = 1ea81ee
 	trimbase = 
 	parent = release/indigo/manipulation_msgs
-	previous = 
+	previous = 94dc7fb
