--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fb0962d
+	base = ae85b1e
 	trimbase = 
 	parent = debian/indigo/manipulation_msgs
-	previous = 
+	previous = fb0962d
