--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c779429
+	base = c010d0a
 	trimbase = 
 	parent = release/indigo/manipulation_msgs
-	previous = 
+	previous = c779429
