--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0682b7a
+	base = 70369a3
 	trimbase = 
 	parent = rpm/indigo/manipulation_msgs
-	previous = 
+	previous = 0682b7a
